<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-19dp"
            android:text="@string/coma" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="314dp"
            android:layout_marginTop="0dp"
            android:text="@string/coma2" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="52dp"
            android:text="@string/scroll" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView13"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="55dp"
            android:text="@string/scroll2" />

        <TextView
            android:id="@+id/textView15"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="138dp"
            android:text="@string/goal1" />

        <TextView
            android:id="@+id/textView16"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView14"
            android:layout_alignParentTop="true"
            android:layout_marginTop="143dp"
            android:layout_marginEnd="10dp"
            android:text="@string/goal2" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="216dp"
            android:text="@string/fall" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView17"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="46dp"
            android:text="@string/falls2" />

        <TextView
            android:id="@+id/textView19"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView17"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="229dp"
            android:text="@string/cf" />

        <TextView
            android:id="@+id/textView20"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView19"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="64dp"
            android:text="@string/cf2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView13"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-28dp"
            android:layout_marginBottom="146dp"
            android:onClick="onClick"
            android:text="@string/button" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-51dp"
            android:layout_marginBottom="146dp"
            android:layout_toStartOf="@+id/textView20"
            android:onClick="onClick2"
            android:text="@string/button" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView13"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-31dp"
            android:layout_marginBottom="85dp"
            android:onClick="onClick3"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button8"
            android:layout_marginEnd="-51dp"
            android:layout_marginBottom="-2dp"
            android:layout_toStartOf="@+id/textView20"
            android:onClick="onClick4"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="153dp"
            android:layout_marginBottom="25dp"
            android:onClick="onClick5"
            android:text="@string/button5" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>